# chronoscope

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
diagrams/: workflow.excalidraw
notebook/: arghyam_od.ipynb  bfm_classification.ipynb  bfm_classification_updated.ipynb  utils.ipynb
prompts/: prompts.py
src/data_cleaning/: 0_remove_duplicate_images.py  0_remove_duplicate_images.py.md  1_removing_duplicate_data_same_images.py  1_streamlit_data_quality.py  1_streamlit_data_quality.py.md  2_data_distribution.py  2_data_distribution.py.md  3_removing_similar_images.py  4_removing_duplicate_data_same_images.py  4_removing_duplicate_data_same_images.py.md  5_checking_orientation_images.py  5_checking_orientation_images.py.md  5_checking_orientation_images_2.py  5_checking_orientation_images_2.py.md  5_correcting_orientations.py  6_clean_annotations.py  7_copy_good_images.py  README.md  data_cleaning_config.yaml  removing_similar_images.py  test.py
src/final_inference/: 1_create_golden_testdata_annotation_streamlit.py  2_check_performance_models.py  2_check_performance_models_hsv.py  app.py  app_gpu.py  app_pv.py  config.yaml  fastapi_enhanced.py  fastapi_gpu.py  final_inference_documentation.md  inference_utils.py  inference_utilsgpu.py
src/inference/: classify_color.py  color_test.py  config.yaml  fastapi.py  inference.py  inference1.py  inference2.py  streamlit_inference.py  streamlit_inference_updated.py  test.py  test_accuracy_check.py  test_accuracy_check_indi.py  test_color_classification.py  test_images_label.py  utils.py  (+3 more)
(+15 files in other folders)
